# versioning

./: README.md  flake.nix  pyproject.toml
nix/: shared.nix
pythonedaartifacteventversioning/: version_created.py  version_requested.py
